--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -1,5 +1,20 @@
 import { Meta } from "@storybook/blocks";
 
+import Github from "./assets/github.svg";
+import Discord from "./assets/discord.svg";
+import Youtube from "./assets/youtube.svg";
+import Tutorials from "./assets/tutorials.svg";
+import Styling from "./assets/styling.png";
+import Context from "./assets/context.png";
+import Assets from "./assets/assets.png";
+import Docs from "./assets/docs.png";
+import Share from "./assets/share.png";
+import FigmaPlugin from "./assets/figma-plugin.png";
+import Testing from "./assets/testing.png";
+import Accessibility from "./assets/accessibility.png";
+import Theming from "./assets/theming.png";
+import AddonLibrary from "./assets/addon-library.png";
+
 export const RightArrow = () => (
   <svg
     viewBox="0 0 14 14"
@@ -30,6 +45,7 @@ export const RightArrow = () => (
   <div className="sb-section">
     <div className="sb-section-item">
       <img
+        src={Styling}
         alt="A wall of logos representing different styling technologies"
       />
       <h4 className="sb-section-item-heading">Add styling and CSS</h4>
@@ -41,6 +57,7 @@ export const RightArrow = () => (
     </div>
     <div className="sb-section-item">
       <img
+        src={Context}
         alt="An abstraction representing the composition of data for a component"
       />
       <h4 className="sb-section-item-heading">Provide context and mocking</h4>
@@ -51,7 +68,7 @@ export const RightArrow = () => (
       >Learn more<RightArrow /></a>
     </div>
     <div className="sb-section-item">
-      <img  alt="A representation of typography and image assets" />
+      <img src={Assets} alt="A representation of typography and image assets" />
       <div>
         <h4 className="sb-section-item-heading">Load assets and resources</h4>
         <p className="sb-section-item-paragraph">To link static files (like fonts) to your projects and stories, use the
@@ -76,7 +93,7 @@ export const RightArrow = () => (
   <div className="sb-section">
     <div className="sb-features-grid">
       <div className="sb-grid-item">
-        <img alt="A screenshot showing the autodocs tag being set, pointing a docs page being generated" />
+        <img src={Docs} alt="A screenshot showing the autodocs tag being set, pointing a docs page being generated" />
         <h4 className="sb-section-item-heading">Autodocs</h4>
         <p className="sb-section-item-paragraph">Auto-generate living,
           interactive reference documentation from your components and stories.</p>
@@ -86,7 +103,7 @@ export const RightArrow = () => (
         >Learn more<RightArrow /></a>
       </div>
       <div className="sb-grid-item">
-        <img  alt="A browser window showing a Storybook being published to a chromatic.com URL" />
+        <img src={Share} alt="A browser window showing a Storybook being published to a chromatic.com URL" />
         <h4 className="sb-section-item-heading">Publish to Chromatic</h4>
         <p className="sb-section-item-paragraph">Publish your Storybook to review and collaborate with your entire team.</p>
         <a
@@ -95,7 +112,7 @@ export const RightArrow = () => (
         >Learn more<RightArrow /></a>
       </div>
       <div className="sb-grid-item">
-        <img  alt="Windows showing the Storybook plugin in Figma" />
+        <img src={FigmaPlugin} alt="Windows showing the Storybook plugin in Figma" />
         <h4 className="sb-section-item-heading">Figma Plugin</h4>
         <p className="sb-section-item-paragraph">Embed your stories into Figma to cross-reference the design and live
           implementation in one place.</p>
@@ -105,7 +122,7 @@ export const RightArrow = () => (
         >Learn more<RightArrow /></a>
       </div>
       <div className="sb-grid-item">
-        <img  alt="Screenshot of tests passing and failing" />
+        <img src={Testing} alt="Screenshot of tests passing and failing" />
         <h4 className="sb-section-item-heading">Testing</h4>
         <p className="sb-section-item-paragraph">Use stories to test a component in all its variations, no matter how
           complex.</p>
@@ -115,7 +132,7 @@ export const RightArrow = () => (
         >Learn more<RightArrow /></a>
       </div>
       <div className="sb-grid-item">
-        <img  alt="Screenshot of accessibility tests passing and failing" />
+        <img src={Accessibility} alt="Screenshot of accessibility tests passing and failing" />
         <h4 className="sb-section-item-heading">Accessibility</h4>
         <p className="sb-section-item-paragraph">Automatically test your components for a11y issues as you develop.</p>
         <a
@@ -124,7 +141,7 @@ export const RightArrow = () => (
         >Learn more<RightArrow /></a>
       </div>
       <div className="sb-grid-item">
-        <img alt="Screenshot of Storybook in light and dark mode" />
+        <img src={Theming} alt="Screenshot of Storybook in light and dark mode" />
         <h4 className="sb-section-item-heading">Theming</h4>
         <p className="sb-section-item-paragraph">Theme Storybook's UI to personalize it to your project.</p>
         <a
@@ -145,13 +162,13 @@ export const RightArrow = () => (
       >Discover all addons<RightArrow /></a>
   </div>
   <div className='sb-addon-img'>
-    <img alt="Integrate your tools with Storybook to connect workflows." />
+    <img src={AddonLibrary} alt="Integrate your tools with Storybook to connect workflows." />
   </div>
 </div>
 
 <div className="sb-section sb-socials">
     <div className="sb-section-item">
-      <img alt="Github logo" className="sb-explore-image"/>
+      <img src={Github} alt="Github logo" className="sb-explore-image"/>
       Join our contributors building the future of UI development.
 
       <a
@@ -160,7 +177,7 @@ export const RightArrow = () => (
       >Star on GitHub<RightArrow /></a>
     </div>
     <div className="sb-section-item">
-      <img  alt="Discord logo" className="sb-explore-image"/>
+      <img src={Discord} alt="Discord logo" className="sb-explore-image"/>
       <div>
         Get support and chat with frontend developers.
 
@@ -171,7 +188,7 @@ export const RightArrow = () => (
       </div>
     </div>
     <div className="sb-section-item">
-      <img alt="Youtube logo" className="sb-explore-image"/>
+      <img src={Youtube} alt="Youtube logo" className="sb-explore-image"/>
       <div>
         Watch tutorials, feature previews and interviews.
 
@@ -182,7 +199,7 @@ export const RightArrow = () => (
       </div>
     </div>
     <div className="sb-section-item">
-      <img alt="A book" className="sb-explore-image"/>
+      <img src={Tutorials} alt="A book" className="sb-explore-image"/>
       <p>Follow guided walkthroughs on for key workflows.</p>
 
       <a
